GNOME Bugzilla – Bug 687133
[hlssink] miscellaneous fixes
Last modified: 2012-11-05 12:46:53 UTC
Here are a few little fixes to hlssink. The playlist-length property is probably not particularly useful in general, but was handy to cut down the latency on a stream.
Created attachment 227562 [details] [review] hlssink: Fix segment names on playlist When the playlist-root is not set, the segment name must not be appended by the path.
Created attachment 227563 [details] [review] hlssink: reset when going to NULL state
Created attachment 227564 [details] [review] hlssink: add a playlist-length property
Even fixes the generic/states unit test, yay! commit a29e3c2eb69ced32a6db46bea45e4de808fa3a68 Author: Will Thompson <will.thompson@collabora.co.uk> Date: Fri Sep 28 12:36:55 2012 -0400 hlssink: add a playlist-length property Probably not particularly useful in general, but handy to cut down the latency on a stream. https://bugzilla.gnome.org/show_bug.cgi?id=687133 commit 0289900323919db3de46bdbfe975ff5146351260 Author: Luciana Fujii Pontello <luciana@fujii.eti.br> Date: Mon Oct 29 13:24:25 2012 +0000 hlssink: reset when going to NULL state https://bugzilla.gnome.org/show_bug.cgi?id=687133 commit 94f51eba13d11775cdfdff9a116d66c1a681882f Author: Luciana Fujii Pontello <luciana@fujii.eti.br> Date: Tue Aug 21 23:22:19 2012 -0300 hlssink: Fix segment names on playlist When the playlist-root is not set, the segment name must not be appended by the path. https://bugzilla.gnome.org/show_bug.cgi?id=687133