hlssink: Fix segment names on playlist

When the playlist-root is not set, the segment name must not be
appended by the path.

https://bugzilla.gnome.org/show_bug.cgi?id=687133